# ShitRenderEngine

./: .gitmodules  CMakeLists.txt  README.md  assets.cfg
assets/models/: plane.gltf
assets/shaders/glsl/: IBL.frag  IBLdeferred.frag  common.vert  gpass.frag  pbr.frag  pbrDeferred.frag  shadow.frag  shadow.geom  shadow.vert  shadowDeferred.frag  skybox.frag  skybox.vert  unlitColor.frag
engine/core/: animation.cpp  animation.hpp  appbase.cpp  appbase.hpp  archive.cpp  archive.hpp  archiveManager.cpp  archiveManager.hpp  behaviour.cpp  behaviour.hpp  boundingVolume.cpp  boundingVolume.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  collider.cpp  collider.hpp  component.cpp  component.hpp  compositor.cpp  compositor.hpp  compositorBase.hpp  compositorWorkspace.cpp  compositorWorkspace.hpp  configFile.cpp  configFile.hpp  descriptorManager.cpp  descriptorManager.hpp  entry.hpp  enums.hpp  environment.cpp  environment.hpp  gltfLoader.cpp  gltfLoader.hpp  gpuResource.cpp  gpuResource.hpp  idObject.hpp  image.cpp  image.hpp  (+58 more)
engine/imguiimpl/: imgui-impl.cpp  imgui-impl.hpp
examples/: 01-image.cpp  02-mymodel.cpp  03-gltf-viewer.cpp  04-testscene.cpp
